test/binCases/errors/validation/config/test.js
"use strict";

module.exports = function(code, stdout, stderr) {
	stderr[0].should.containEql("Invalid configuration object");
};
